<resources>
    <string name="app_name">Supermercado Facil</string>
    <string name="label_google_sign_in" translatable="false">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="marca_do_produto">Marca:</string>
    <string name="nome_do_produto">Produto:</string>
    <string name="valor_do_produto">Valor</string>

    <string name="Nome_do_produto">produto</string>
    <string name="Marca_do_produto">Marca</string>
    <string name="Descrição_do_Produto">Descrição_do_Produto</string>
    <string name="Valor_da_Promocao2">Valor</string>
    <string name="Valor_da_Promocao1">Valor</string>
    <string name="IdCliente">IdCliente</string>
    <string name="local">Endereço do estabelecimento</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
        <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>

    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
          <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
          <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
        <string name="facebook_app_id">[APP_ID]</string>
        <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
    </string>
    <string name="loading" />
    <string name="sign_in_with_google">Sign In with Google</string>

    <string name="sign_out_with_google">logout</string>
    <string name="Disconect">Disconect</string>
    <string name="not_revoke">disconeted</string>
    <string name="not_sign_in">nao foi possivel desconectar</string>
    <string name="revoke">revoke</string>
    <string name="log_out">log_out1</string>
    <string name="not_log_in">not log in</string>
    <string name="title_activity_menu_01">Mercado Fácil</string>
    <string name="title_activity_menu_02">Mercado Fácil - Promoção</string>
    <string name="title_activity_menu_03">Mercado Fácil - Lista</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="oAuth_clientID">351946204822-msb63csd41tp2h2cdul0kv5tj95bnmh1.apps.googleusercontent.com</string>
    <string name="compartilhe">Compartilhe</string>
    <string name="desconectar">Desconectar</string>
    <string name="comunicacao">Comunicação</string>
    <string name="minha_lista">Minha Lista</string>
    <string name="promocao">Promoção</string>
    <string name="nome_label">Nome:</string>
    <string name="marca_label">Marca:</string>
    <string name="local_label">Local:</string>
    <string name="sair">sair</string>
    <string name="title_activity_menu_lista">MenuListaActivity</string>
    <string name="salvar_produto">Salvar Produto</string>
    <string name="endereco_do_estabelecimento">Cidade do Estabelecimento</string>
    <string name="nome_do_estabelecimento">estabelecimento / endereço</string>
    <string name="idbanner">ca-app-pub-9404483305208909/3835687555</string>

</resources>
