<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_promocao"
            android:icon="@drawable/ic_attach_money_24dp"
            android:title="@string/promocao" />
        <item
            android:id="@+id/nav_minha_lista"
            android:icon="@drawable/ic_list_24dp"
            android:title="@string/minha_lista" />


    </group>

    <item android:title="@string/comunicacao">
        <menu>
            <!--item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/compartilhe" /-->
            <item
                android:id="@+id/nav_desconectar"
                android:icon="@drawable/ic_exit_app_black_24dp"
                android:title="@string/desconectar" />
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_exit_app_black_24dp"
                android:title="@string/sair" />
        </menu>
    </item>

</menu>
