<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loggedActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    tools:context=".telasiniciais.LoggedActivity">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/idTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="4sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/mainMenu"
        style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
        android:shadowRadius="@integer/google_play_services_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="VA PARA O MENU"
        android:paddingBottom="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="goMenu"
        />


    <Button
        android:text="@string/log_out"
        android:shadowRadius="@integer/google_play_services_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:paddingBottom="10dp"
        android:onClick="LogOut"/>
    <Button
        android:text="@string/revoke"
        android:layout_width="match_parent"
        android:shadowRadius="@integer/google_play_services_version"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:paddingBottom="10dp"
        android:onClick="Revoke"
        />




</LinearLayout>